--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -38,7 +38,7 @@ parts:
   scrcpy-server:
     plugin: nil
     override-pull:
-      wget https://github.com/Genymobile/scrcpy/releases/download/v1.8/scrcpy-server-v1.8.jar
+      curl -O https://github.com/Genymobile/scrcpy/releases/download/v1.8/scrcpy-server-v1.8.jar
     override-build: |
       mkdir -p $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/
       cp scrcpy-server-v1.8.jar $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server.jar
@@ -67,7 +67,6 @@ parts:
       - libslang2
       - libglu1-mesa
       - android-tools-adb
-      - wget
 
 plugs:
 # For snaps with a graphical user interface:
