--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -38,7 +38,7 @@ parts:
   scrcpy-server:
     plugin: nil
     override-pull:
-      curl -O https://github.com/Genymobile/scrcpy/releases/download/v1.8/scrcpy-server-v1.8.jar
+      wget https://github.com/Genymobile/scrcpy/releases/download/v1.8/scrcpy-server-v1.8.jar
     override-build: |
       mkdir -p $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/
       cp scrcpy-server-v1.8.jar $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server.jar
@@ -62,7 +62,7 @@ parts:
       - libavformat-dev
       - libavutil-dev
       - libsdl2-dev
-      - curl
+      - wget
     stage-packages:
       - ffmpeg
       - libsdl2-2.0-0
