--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,6 +18,10 @@ base: core18
 architectures:
 - build-on: i386
 - build-on: amd64
+- build-on: armhf
+    run-on: armhf
+    build-error: ignore
+
 
 apps:
   scrcpy:
