--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,7 +18,6 @@ base: core18
 architectures:
 - build-on: i386
 - build-on: amd64
-- build-on: armhf
 
 apps:
   scrcpy:
@@ -66,8 +65,8 @@ parts:
       - -Dbuild_server=false
     override-pull: |
         snapcraftctl pull
-        git checkout v1.9
-        snapcraftctl set-version $(git describe --tag)      
+        git checkout bcd0a87
+        snapcraftctl set-version v1.9 #$(git describe --tag)      
     build-packages:
       - make
       - gcc
