--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,8 +23,10 @@ apps:
   scrcpy:
     command: usr/local/bin/scrcpy
     environment:
-      LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/pulseaudio:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/android:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri"
-
+      LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/pulseaudio:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/android"
+      MESA_GLSL_CACHE_DIR: "$SNAP_USER_DATA"
+      LIBGL_DRIVERS_PATH: "$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri"
+      
   adb:  
     command: usr/bin/adb
     environment:
@@ -34,9 +36,6 @@ apps:
 layout:
   /usr/local/share/scrcpy:
     bind: $SNAP/usr/local/share/scrcpy
-  /usr/lib/dri:
-    bind: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri
-
 
 parts:
   scrcpy-server:
