fix for a9c8fa3
https://github.com/Genymobile/scrcpy/commit/a9c8fa305d2313bed70b2d1d756083f40e065352

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -56,8 +56,8 @@ parts:
       - -Dcompile_server=false
     override-pull: |
         snapcraftctl pull
-        git checkout v1.10
-        snapcraftctl set-version $(git describe --tag)
+        git checkout a9c8fa3
+        snapcraftctl set-version v1.10 #$(git describe --tag)
     build-packages:
       - make
       - gcc
