--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -53,7 +53,8 @@ parts:
         git checkout dev
         snapcraftctl set-version $(git describe --tag)      
     override-build: |
-        cp $SNAPCRAFT_PROJECT_DIR/sdk-tools-linux-4333796.zip ./
+#        cp $SNAPCRAFT_PROJECT_DIR/sdk-tools-linux-4333796.zip ./
+        wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
         unzip sdk-tools-linux-4333796.zip
 
         JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
@@ -68,8 +69,8 @@ parts:
 
         yes | $SNAPCRAFT_PART_BUILD/tools/bin/sdkmanager --licenses
 
-        cp -r $SNAPCRAFT_PROJECT_DIR/platforms ./
-        cp -r $SNAPCRAFT_PROJECT_DIR/build-tools ./
+#        cp -r $SNAPCRAFT_PROJECT_DIR/platforms ./
+#        cp -r $SNAPCRAFT_PROJECT_DIR/build-tools ./
         $SNAPCRAFT_PART_BUILD/tools/bin/sdkmanager build-tools\;28.0.3
         $SNAPCRAFT_PART_BUILD/tools/bin/sdkmanager platforms\;android-29
         cp $SNAPCRAFT_PROJECT_DIR/build-wrapper.sh server/scripts/build-wrapper.sh
