--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,10 +41,10 @@ parts:
   scrcpy-server:
     plugin: nil
     override-pull:
-      wget https://github.com/Genymobile/scrcpy/releases/download/v1.10/scrcpy-server-v1.10.jar
+      wget https://github.com/Genymobile/scrcpy/releases/download/v1.11/scrcpy-server-v1.11
     override-build: |
       mkdir -p $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/
-      cp scrcpy-server-v1.10.jar $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server.jar
+      cp scrcpy-server-v1.11 $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server
 
   scrcpy:
     source: https://github.com/Genymobile/scrcpy.git
@@ -56,8 +56,8 @@ parts:
       - -Dcompile_server=false
     override-pull: |
         snapcraftctl pull
-        git checkout a9c8fa3
-        snapcraftctl set-version v1.10 #$(git describe --tag)
+        git checkout v1.11
+        snapcraftctl set-version $(git describe --tag)
     build-packages:
       - make
       - gcc
