--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -63,6 +63,7 @@ parts:
       - pkg-config
       - meson
       - ninja-build
+      - libavdevice-dev
       - libavcodec-dev
       - libavformat-dev
       - libavutil-dev
