--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -68,6 +68,7 @@ parts:
       - libavformat-dev
       - libavutil-dev
       - libsdl2-dev
+      - libusb-1.0-0-dev
       - wget
     stage-packages:
       - ffmpeg
