--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -71,6 +71,7 @@ parts:
       - libavutil-dev
       - libsdl2-dev
       - libusb-dev
+      - libusb-1.0-0-dev
       - wget
     stage-packages:
       - ffmpeg
