--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -38,7 +38,7 @@ apps:
 layout:
   /usr/local/share/scrcpy:
     symlink: $SNAP/usr/local/share/scrcpy
-  /usr/local/share/icons
+  /usr/local/share/icons:
     symlink: $SNAP/usr/local/share/icons
 
 parts:
