--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,8 +18,8 @@ base: core18
 architectures:
 - build-on: i386
 - build-on: amd64
-- build-on: arm64
-- build-on: armhf
+#- build-on: arm64
+#- build-on: armhf
 
 apps:
   scrcpy:
@@ -54,7 +54,7 @@ parts:
     source: https://github.com/Genymobile/scrcpy.git
     plugin: meson
     meson-parameters: 
-      - --buildtype=release
+      - --buildtype=debug
       - --strip 
       - -Db_lto=true
       - -Dcompile_server=false
