--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,10 +45,10 @@ parts:
   scrcpy-server:
     plugin: nil
     override-pull:
-      wget https://github.com/Genymobile/scrcpy/releases/download/v1.20/scrcpy-server-v1.20
+      wget https://github.com/Genymobile/scrcpy/releases/download/v1.21/scrcpy-server-v1.21
     override-build: |
       mkdir -p $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/
-      cp scrcpy-server-v1.20 $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server
+      cp scrcpy-server-v1.21 $SNAPCRAFT_PART_INSTALL/usr/local/share/scrcpy/scrcpy-server
 
   scrcpy:
     source: https://github.com/Genymobile/scrcpy.git
@@ -60,7 +60,7 @@ parts:
       - -Dcompile_server=false
     override-pull: |
         snapcraftctl pull
-        git checkout 739ff9d
+        git checkout v1.21
         snapcraftctl set-version $(git describe --tag)
     build-packages:
       - make
