--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -40,8 +40,8 @@ layout:
     symlink: $SNAP/usr/local/share/scrcpy
   /usr/local/share/icons:
     symlink: $SNAP/usr/local/share/icons
-  /usr/share/libdrm/:
-    bind: $SNAP/usr/share/libdrm/
+  /usr/share/libdrm:
+    bind: $SNAP/usr/share/libdrm
   /usr/share/alsa:
     bind: $SNAP/usr/share/alsa
 
