attempt to workaround "Parts 'scrcpy' and 'launchers-notice' list the following files" error
The patch tries to workaround the following error:

```text
Staging desktop-glib-only
Failed to stage: parts list the same file with different contents or permissions.
Detailed information: Parts 'scrcpy' and 'launchers-notice' list the following files, but with different contents or permissions:
    usr/lib/x86_64-linux-gnu/libasound.so.2
```

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -178,6 +178,7 @@ parts:
       - libsdl2-2.0-0
       - libsdl2-ttf-2.0-0
     stage:
+      - -usr/lib/*/libasound.so*
       - -usr/lib/*/libicui18n.so*
       - -usr/lib/*/libicuio.so*
       - -usr/lib/*/libicutu.so*
