--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,7 +24,7 @@ platforms:
     build-on: [arm64]
     build-for: [arm64]
   armhf:
-    build-on: [armhf, arm64]
+    build-on: [armhf]
     build-for: [armhf]
 
 apps:
